--- a/src/lab/exp2/goal.css
+++ b/src/lab/exp2/goal.css
@@ -3,19 +3,53 @@ select {
     padding: 2px 5px;
     margin-left: 30px;
     margin-top: 120px;
+    margin-top: 90px;
     border:solid 1.5px;
     border-radius: 3px;
 }
-body{
-    background-color: white;
-}
-
+@@ -13,14 +13,45 @@ body{
 #line1{
     font-size: 20px;
     color: darkblue;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #line2{
     font-size: 20px;
     color: blue;
     font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
 } 
+button {
+    width: 80px;
+    height: 25px;
+    margin: 5px;  
+  }
+  p { margin: 0 !important; }
+
+  #p2{
+    font-size: 20px;
+    color: darkblue;
+	display: inline;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#p4{
+	display: inline;
+	font-size: 20px;
+    color:blue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+}
+
+
+
+#p3{
+    font-size: 33px;
+    color: #3d3d5c;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+}
+#sen2 {
+    width: 150px;
+    height: 20px;
+    margin: 10px;  
+}
